   FreeBSD-based platforms. This requires specific
   permissions (s+g kmem). We fallback if that fails.
   use a genlist (meh).
   * Save settings upon exit (kb/mb/gb) and sorting.
   * Reduce object creation and deletion.
   * Use object caching where applicable.
   * Remove redundant code.
   * FreeBSD et al. Get process arguments akin to Linux.
   * Other stuff.

============
Evisum 0.3.2
============

   * Add new icon. This works better with our
     existing applications. It has a retro
     feel.

============
Evisum 0.3.1
============

   * Fix OpenBSD process init.

============
Evisum 0.3.0
============

   * Fix UI alignment.
   * Add search to UI.
   * General tidying.
   * Fix rare crash.
   * Fix some calculations.
   * Linux process information improvements.
   * OpenBSD specific fixes.
   * Various UI improvements.
   * Various tidying.
   * Move to Meson build system.
   ...

============
Evisum 0.2.6
============

   * Add support for multiple batteries (GUI).
   * Various refactoring.
   * Increase responsiveness.
   * GUI changes.
   * Shutdown improvements.
   * Fix some memory leaks.
   * Battery names (where applicable).
   * Various small tidying.
   * Use Eina helpers where applicable.
   * Add battery names and model (Linux and FreeBSD).

============
Evisum 0.2.4
============

   * Fix GUI on launch and shutdown.
   * Fix tingle compilation (makefile).
   * Other bug fixes and improvements.

============
Evisum 0.2.2
============

   * Fix OpenBSD CPU usage (6.5+).
   * Visual fixes.
   * Add swapped memory item.
   * Updated tingle command-line tool.
   * Small bug fixes.

============
Evisum 0.2.0
============

   * Add command-line utility (tingle) to complement
     evisum.
   * Fix object destruction before exiting main loop.
   * Add variable unit display (K, M and G).
   * Minor refactoring.

============
Evisum 0.1.2
============

Fixes:

    * Fix process list geometry on resize.
    * Install icon in proper location.