@@ -24,8 +24,6 @@
 # define PID_MAX     99999
 #endif
 
-#define CMD_NAME_MAX 1024
-
 typedef struct _Proc_Info
 {
    pid_t       pid;
